public static class AssetsPath
{
    public static class ServicesPath
    {
        public const string SceneService = "Core/Services/SceneService";
    }

    public static class ScenePath
    {
        public const string MainMenu = "Scenes/MeinMenu";
    }

    public static class AnimationPath
    {
        public const string OnClickUp = "OnClickUp";
        public const string Velocity = "Velocity";
        public const string OnDie = "OnDie";
        public const string IsRest = "IsRest";
        public const string IsFalling = "IsFalling";
    }
}